# argus-curator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
schema/: curator-wire.schema.json
src/argus_curator/: __init__.py  cli.py  clustering.py  detectors.py  embeddings.py  export.py  faces.py  filters.py  models.py  presets.py  scanner.py  scoring.py  selection.py  server.py  store.py  types.py  web_sessions.py
src/argus_curator/server/: __init__.py  app.py
tests/: conftest.py  test_export.py  test_pose.py  test_scanner.py  test_schema.py  test_server.py  test_web_sessions.py
