[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-curator"
dynamic = ["version"]
description = "LoRA-native dataset curation: training-suitability scoring, near-duplicate dedup, and identity-aware face clustering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
keywords = [
    "curation", "dataset", "lora", "training", "diffusion",
    "image-quality", "deduplication", "phash", "face-clustering",
    "insightface", "stable-diffusion", "flux", "sdxl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "ImageHash>=4.3",
    "pydantic>=2.6",
    "structlog>=24.0",
]

[project.optional-dependencies]
# httpx powers the optional export -> argus-lens caption handoff (_post_manifest_to_lens).
# argus-cortex supplies the shared write-guard (argus_cortex.server), imported only by
# server/app.py — hence the [server] extra rather than the base dependencies, so an
# engine/CLI-only install stays engine-only. Its [server] extra pulls starlette; fastapi
# provides it too, but declaring it keeps the constraint honest. fastapi>=0.110.1 is the
# first release requiring starlette>=0.37 — 0.110.0 pins starlette<0.37 and so cannot be
# resolved alongside argus-cortex[server]. The <0.3 cap is deliberate: argus-cortex is
# pre-1.0, where a minor bump carries no compatibility guarantee, and this is
# security-critical middleware resolved fresh on every Docker build.
server = [
    "fastapi>=0.110.1",
    "uvicorn>=0.27",
    "python-multipart>=0.0.7",
    "httpx>=0.27",
    "argus-cortex[server]>=0.2.0,<0.3",
]
cli = ["typer>=0.12", "rich>=13.0"]
gpu = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16",
    "opencv-python-headless>=4.9",
    "scikit-learn>=1.3",
]
faces = [
    "insightface>=0.7.3",
    "onnxruntime>=1.16",
    "opencv-python-headless>=4.9",
    "scikit-learn>=1.3",
]
# Composed from the extras above rather than hand-duplicating them, so a new
# member of `server`/`cli`/`faces` cannot silently go missing from `all`.
all = ["argus-curator[server,cli,faces]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "httpx>=0.27", "httpx2>=2.7"]

[project.scripts]
argus-curator = "argus_curator.cli:app"

[project.urls]
Homepage = "https://github.com/smk762/argus-curator"
Repository = "https://github.com/smk762/argus-curator"
Issues = "https://github.com/smk762/argus-curator/issues"
Changelog = "https://github.com/smk762/argus-curator/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_curator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_curator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
